<resources>
    <string name="app_name">fragment_application_24_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="make_task_income">Сделать задачу (доход)</string>
    <string name="date">Дата</string>
    <string name="description">Описание</string>
    <string name="count">Количество</string>
    <string name="press">Нажать</string>
    <string name="delete_zadachy">Удалить задачу (доход)</string>
    <string name="delete_task">Удалить задачу</string>
    <string name="change_task">Редактировать задачу</string>
</resources>